# openpipe

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  TESTING.md  archlinux.yaml  index.html  mkdocs.yml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yml  deploy-site.yml  mkdocs.yml
1.0/: generate_actions_doc.yaml
1.0/action-devel/: index.html
1.0/actions/: index.html
1.0/language/: index.html
1.0/openpipe-runtime/: index.html
1.0/tool/: index.html
Windows_Python_3_Install/: index.html
css/: extra.css
demos/: EU_Tenders_Electronic_Daily.yaml  api.exchangeratesapi.io.yaml  passwd.yaml  run_all_demos.yaml
doc/: ActionNameRules.md  Architecture.md  DEBUG.md  PipelineDocumentLoader.md  Plugin_Development.md
docs/: business.md  index.md  services.md
docs.in/: CNAME  Windows_Python_3_Install.md  index.md
docs.in/1.0/: tool.md
docs/1.0/: action-devel.md  actions.md.jinja  generate_actions_doc.yaml  language.md  openpipe-opl.md  openpipe-runtime.md  plugin-devel.md  tool.md
docs/css/: extra.css
docs/js/: autoexpand.js  consentinit.js
docs/software/: data_visualization.md  devops.md  machine_learning.md
git-hooks/: pre-commit
openpipe/: __main__.py  about.py
openpipe/actions/: CHANGELOG.md  assert_.py  assert_examples.yaml  assert_test.yaml  count_.py  count_test.yaml  decompress_.py  decompress_test.yaml  drop_.py  drop_test.yaml  empty_.py  empty_test.yaml  execute_.py  execute_test.yaml  filter_.py  generate_.py  (+38 more)
samples/: build_archives.sh  build_archives.yaml  cmd_parser.yaml  multi_thread_test.yaml  test.json  test.tar  test.txt  test.yaml
scripts/: check_help_availability.sh  check_plugin_supportfiles.sh  check_test_availability.sh  publish-www.sh  release.sh  test_extra_actions.sh  verbose_test.sh
search/: search_index.json
tests/: libraries.yaml  test_libraries.py  test_plugins.py
(+344 files in other folders)
