[metadata]
name = openpipe
url = https://github.com/OpenPipe/openpipe
author = lamego.pinto@gmail.com
author_email = lamego.pinto@gmail.com
summary = Plugin-driven engine for data collecting, analyzing and reporting
version = attr: openpipe.cli.version
description = Plugin-driven engine for data collecting, analyzing and reporting
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
install_requires =
    dinterpol
    pyyaml
    click
    xmltodict
    mdvl

[options.package_data]
* = *.txt, *.rst
hello = *.msg

