[metadata]
url = https://github.com/Openpipe/openpipe
version = attr: openpipe.about.__version__
description = A human friendly data-oriented integration toolkit
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
include_package_data = True
packages = find:

